# logsar

./: CMakeLists.txt  README.md
c_api/: logger_c.h
examples/: basic_usage.cc
include/: formatter.h  level.h  logger.h  message.h
include/logger/: logger.h
src/: logger.cc  logger.cpp
src/src/: logger.cpp
src/tests/: test_logger.h
src/utils/: formatter.cc  formatter.cpp
tests/: test_logger.cc  test_logger.cpp
